<resources>
    <string name="app_name">Board Gamer</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="login_btn">Login</string>
    <string name="login_success">Login successfull!</string>
    <string name="register_btn">Register</string>
    <string name="regis_firstname">Firstname</string>
    <string name="regis_lastname">Lastname</string>
    <string name="regis_email">Email</string>
    <string name="regis_password">Password</string>
    <string name="regis_password_conf">Password Confirmation</string>
    <string name="regis_invalid_password">Invalid Password! Password must contain at least 1 Digit, 1 uppercase Letter and 1 lowercase Letter!</string>
    <string name="regis_address">Address (Street &amp; Number, Code &amp; City)</string>
    <string name="regis_data">Please enter your Data:</string>
    <string name="regis_data_pers">Personal Data:</string>
    <string name="regis_data_login">Login Data:</string>
    <string name="regis_save_btn">Save</string>
    <string name="discard_title">Warning</string>
    <string name="discard_msg">This will discard all your Data Entries. Do you want to continue?</string>
    <string name="discard_yes">Yes</string>
    <string name="late_quick_msg">Quick Message:</string>
    <string name="late_custom_msg">Customized Message:</string>
    <string name="late_custom_time">Customized Time:</string>
    <string name="fiveMin">Five Minutes</string>
    <string name="fifteenMin">Fifteen Minutes</string>
    <string name="thirtyMin">Thirty Minutes</string>
    <string name="optional">(optional)</string>
    <string name="custom_lateMins">Your Late Time in Minutes</string>
    <string name="late_check">Confirm</string>
    <string name="next_meeting">Next Meeting</string>
    <string name="nxt_mtng_date">Date</string>
    <string name="main_mtng_day">--/--/----</string>
    <string name="main_mtng_time">--:--</string>
    <string name="nxt_mtng_host">Host</string>
    <string name="main_mtng_host">(Host)</string>
    <string name="nxt_mtng_address">Address</string>
    <string name="main_mtng_address">(Address)</string>
    <string name="next_mtng_participants">Participants</string>
    <string name="main_logoutBtn">Logout</string>
    <string name="main_menuBtn">Menu</string>
    <string name="main_lateBtn">I´m going to be late!</string>
    <string name="main_ratingBtn">Rate last Gamenight</string>
    <string name="main_cannot_take_part_msg">Are you sure you don\'t want to participate?</string>
    <string name="main_canceled">Gamenight canceled!</string>
    <string name="meal_rate">How would you rate the Meal?</string>
    <string name="gameNight_rate">How would you rate the Gamenight overall?</string>
    <string name="main_cannotTakePart">I cannot take part!</string>
    <string name="main_games">Games for next Gamenight</string>
    <string name="main_edit_btn">Edit Meeting</string>
    <string name="rate_cannot_rate">You can\'t rate the last Gamenight! You didn\'t take part!</string>
    <string name="main_late_time_label">Late Arrival</string>
    <string name="main_contact_admin_label">Please contact an Admin!</string>
    <string name="main_contact_admin_msg">Only Admins can manage the App Settings!"\n"If you have some Recommendations please contact an Admin!"\n"Admin(s):</string>
    <string name="user_not_taking_part_label_msg">(You are not taking part!)</string>
    <string name="user_not_taking_part_already">You are not taking part already!</string>
    <string name="user_not_taking_part">You are not taking part!</string>
    <string name="user_didnt_take_part">You didn\'t take part!</string>
    <string name="rate_msg">Do you want to tell something to the Host?</string>
    <string name="rate_send">Send Message</string>
    <string name="myAccountData">My Account</string>
    <string name="accountData_firstname">Firstname</string>
    <string name="accountData_lastname">Lastname</string>
    <string name="accountData_name">Name</string>
    <string name="accountData_email">Email</string>
    <string name="accountData_address">Address</string>
    <string name="updateAccDataBtn">Update your Data</string>
    <string name="changePassBtn">Change your Password</string>
    <string name="accDatatUpdate">Update your Data</string>
    <string name="updateName">Update Name</string>
    <string name="updateFirstname">Update Firstname</string>
    <string name="updateLastname">Update Lastname</string>
    <string name="updateEmail">Update Email</string>
    <string name="updateAddress">Update Address (Street &amp; Number, Code &amp; City)</string>
    <string name="saveUpdatedData">Save Changes</string>
    <string name="changePassword">Change your Password</string>
    <string name="saveChangedPass">Save</string>
    <string name="label_currentPass">Current Password</string>
    <string name="label_newPass">New Password</string>
    <string name="label_confirmNewPass">Confirm new Password</string>
    <string name="menu_acc">My Account</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_mngmnt">Management (only for Admins)</string>
    <string name="mngmnt_label">Management</string>
    <string name="mngmnt_user">User Management</string>
    <string name="mngmnt_chooseUser">User</string>
    <string name="mngmnt_chooseDay">Choose Day</string>
    <string name="mngmnt_chooseTime">Choose Time</string>
    <string name="mngmnt_adminStatus">Dive Admin Status</string>
    <string name="mngmnt_deactivateUser">Deactivate User</string>
    <string name="mngmnt_current_regular_appointment">Current Default Periodic Appointment</string>
    <string name="mngmnt_default_regular_appointment">Change Default Periodic Appointment</string>
    <string name="mngmnt_default_regular_appointment_confirm">Confrim Changed Default Periodic Appointment</string>
    <string name="mngmnt_selectTime">Select Time</string>
    <string name="mngmnt_day">Day</string>
    <string name="mngmnt_time">Time</string>
    <string name="mngmnt_select_user_admin">Select a User</string>
    <string name="mngmnt_select_day">Select Day</string>
    <string name="mngmnt_select_user_admin_toast">Please select a User!</string>
    <string name="mngmnt_user_deactivate_title">Deactivate user Account</string>
    <string name="mngmnt_user_deactivate_msg">Are you sure you want to deactivate this Users Account?</string>
    <string name="mngmnt_admin_title">Give Admin Status</string>
    <string name="mngmnt_admin_msg">Set this Users account to Admin?</string>
    <string name="mngmnt_is_admin_already">This Users Account is already set to Admin!</string>
    <string name="mngmnt_acc_set_to_admin">Account set to Admin!</string>
    <string name="mngmnt_acc_set_to_admin_failed">Account set to Admin failed!</string>
    <string name="mngmnt_appointment_change_title">Change Periodic Appointment Time</string>
    <string name="mngmnt_appointment_change_msg">Do you want to change the Default Periodic Appointment to:</string>
    <string name="leave_app">Do you want to leave Board Gamer?</string>
    <string name="meeting_label_meeting">Next Meeting</string>
    <string name="label_meeting_nxt_mtng_date">Date</string>
    <string name="meeting_nxt_mtng_day">Day</string>
    <string name="meeting_nxt_mtng_time">Time</string>
    <string name="label_meeting_nxt_mtng_host">Host</string>
    <string name="label_meeting_nxt_mtng_address">Address</string>
    <string name="meeting_edit_mtng_btn">Edit Meeting</string>
    <string name="meeting_cancel_mtng_btn">Cancel Meeting</string>
    <string name="meeting_confirm_mtng_end_btn">Confirm Meeting End</string>
    <string name="games_vote_game_btn">Vote Game</string>
    <string name="games_sug_games">Suggested Games for next Gamenight</string>
    <string name="games_sug_game">Suggest Game</string>
    <string name="games_my_sug_game">My Suggested Game</string>
    <string name="logout_msg">Do you want to logout?</string>
    <string name="greetText">Hello</string>
    <string name="user"></string>
    <string name="notAdmin">You´re not an admin!</string>
    <string name="check_entries">Please check your Entries!</string>
    <string name="confirm_your_password">Please confirm your Password!</string>
    <string name="confirm_your_password_failed">Password Confirmation failed!</string>
    <string name="password_too_short">Password too short! Minimum 8 Digits!</string>
    <string name="password_too_long">Password too long! Maximum 20 Digits!</string>
    <string name="regis_successfull">Registration successfull!</string>
    <string name="regis_failed">Registration failed! Please try again!</string>
    <string name="regis_invalid_address">Invalid Address!</string>
    <string name="regis_registration_title">Registration</string>
    <string name="regis_check_regis_data">Check your Registration Data:</string>
    <string name="regis_check_regis_data_continue">Continue?</string>
    <string name="enter_curr_pass">Please enter your current Password!</string>
    <string name="enter_new_pass">Please enter a new Password!</string>
    <string name="pass_change_success">Password changed successfully!</string>
    <string name="pass_change_err">Error!</string>
    <string name="auth_failed">Current password wrong!</string>
    <string name="pass_conf_failed">Password Confirmation failed!</string>
    <string name="forgot_pass">Reset Password</string>
    <string name="reset_pass_msg">Do you want to reset your Password?</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_pass_email">Your Account Email Address</string>
    <string name="reset_pass_email_text">Enter the Email Address of your Account here</string>
    <string name="confirm_reset_pass_email">Confirm Reset Password</string>
    <string name="data_update_success">Account Data updated successfully!</string>
    <string name="data_update_fail">Error! Account Data couldn\'t be updated!</string>
    <string name="reset_enter_acc_email">Please enter the Email Address of your Account!</string>
    <string name="reset_email_sent_to">Password reset Email sent to: </string>
    <string name="reset_pass_error">Error! Password reset failed!</string>
    <string name="acc_deactivated">Your Account has been deactivated! Please contact an Admin!</string>
    <string name="enter_login_data">Please enter your Login Data!</string>
    <string name="date_format">MM/dd/yyyy</string>
    <string name="date_time_format">MM/dd/yyyy HH:mm</string>
    <string name="games_suggest_game_btn">Suggest Game</string>
    <string name="rate_last_gamenight_title">Rate last Gamenight</string>
    <string name="rate_last_gamenight_msg">Do you want to rate the last Gamenight? (your rating:</string>
    <string name="change_rate_last_gamenight_msg">Do you want to change your Rating to:</string>
    <string name="rate_pls_rate_meal">Please rate the Meal at first!</string>
    <string name="rate_pls_rate_night">Please rate the Gamenight overall!</string>
    <string name="rate_rating_changed">Your rating has been changed successfully!</string>
    <string name="rate_rating_success">Your rating was added successfully!"</string>
    <string name="rate_meal_label">Meal</string>
    <string name="rate_gamenight_label">Gamenight</string>
    <string name="rate_all_ratings_label">All ratings</string>
    <string name="rate_user_comment">Comment</string>
    <string name="rate_change_rating_title">Change Rating</string>
    <string name="games_suggest_game_title">Suggest Game</string>
    <string name="games_suggest_game_msg">Do you want to suggest this Game:</string>
    <string name="games_suggest_game_txt">Please enter a Game for suggestion!</string>
    <string name="games_suggest_game_alreadySuggested">This Game has been suggested already!</string>
    <string name="games_suggest_game_successfull">Game suggested successfully!</string>
</resources>