<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/quick_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/late_quick_msg"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/fiveMin_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="#0000"
                    android:contentDescription="@string/fiveMin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/clock_5" />

                <ImageButton
                    android:id="@+id/fifteenMin_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="#0000"
                    android:contentDescription="@string/fifteenMin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/clock_15" />

                <ImageButton
                    android:id="@+id/thirtyMin_btn"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:background="#0000"
                    android:contentDescription="@string/thirtyMin"
                    android:scaleType="fitCenter"
                    android:src="@drawable/clock_30" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cutom_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/late_custom_msg"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/custom_msgEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/optional"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/custom_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/late_custom_time"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/custom_timeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/custom_lateMins"
                android:inputType="time"
                android:minHeight="48dp" />

            <ImageButton
                android:id="@+id/late_confirmBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="10dp"
                android:background="#0000"
                android:contentDescription="@string/late_check"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/check" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/app_icon"
            android:scaleX="0.5"
            android:scaleY="0.5">

        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>