<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:orientation="vertical"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/ratingUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/listItemMealRating"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/rate_meal_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/mealRatingStars"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:clickable="false"
            android:contentDescription="@string/meal_rate"
            android:max="5"
            android:numStars="5"
            android:progressTint="#FFCC01"
            android:rating="0"
            android:stepSize="1" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/nightRating"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/rate_gamenight_label"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/nightRatingStars"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:clickable="false"
            android:contentDescription="@string/gameNight_rate"
            android:max="5"
            android:numStars="5"
            android:progressTint="#FFCC01"
            android:rating="0"
            android:stepSize="1" />
    </TableRow>

    <TextView
        android:id="@+id/userCommentLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/rate_user_comment"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="TextView"
        android:textSize="14sp" />

</LinearLayout>